--- a/.gitmodules
+++ b/.gitmodules
@@ -16,10 +16,10 @@
 	url = https://github.com/mollifier/cd-gitroot
 [submodule "custom/plugins/zce"]
 	path = custom/plugins/zce
-	url = git@github.com:15cm/zce.zsh.git
+	url = https://github.com/15cm/zce.zsh
 [submodule "custom/plugins/yadm"]
 	path = custom/plugins/yadm
-	url = git@github.com:15cm/yadm-zsh.git
+	url = https://github.com/15cm/yadm-zsh
 [submodule "custom/plugins/alias-tips"]
 	path = custom/plugins/alias-tips
 	url = https://github.com/djui/alias-tips
